--- a/noti_privacy_policy.html
+++ b/noti_privacy_policy.html
@@ -85,7 +85,7 @@
                 <br>
             </div>
             <br>
-            <a href="Index.html">
+            <a href="https://tahamd.github.io/">
                 <input type="button" value="Home Page" id="button">
             </a>
 
