--- a/noti_privacy_policy.html
+++ b/noti_privacy_policy.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka One">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Privacy Policy</title>
 
         <style>
             body{
