--- a/noti_privacy_policy.html
+++ b/noti_privacy_policy.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka One">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="icon" type="image/x-icon" href="Logo.svg">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Privacy Policy</title>
 
