--- a/noti_privacy_policy.html
+++ b/noti_privacy_policy.html
@@ -34,9 +34,10 @@
                 margin-left: 1%;
                 background-color: #eeeeee;
                 font-family: 'Fredoka One';
+                border: none;
             }
             #button:hover{
-                color: #CD4236;
+                color: #cd4236;
             }
             #card{
                 width: 95%;
