--- a/noti_privacy_policy.html
+++ b/noti_privacy_policy.html
@@ -34,7 +34,7 @@
                 margin-left: 1%;
                 background-color: #eeeeee;
                 font-family: 'Fredoka One';
-                border: none;
+                border-style:hidden;
             }
             #button:hover{
                 color: #cd4236;
